sourceCompatibility = 16

[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = ["src/"]
sourceSets.test.java.srcDirs = ["test/"]

eclipse.project.name = appName + "-core"

test {
    testLogging {
        events "passed", "skipped", "failed"
    }
}
